--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party = MultiChoice,click,dotenv,imblearn,matplotlib,numpy,pandas,requests,sklearn,tqdm,xgboost
+known_third_party = MultiChoice,click,dotenv,imblearn,matplotlib,pandas,requests,sklearn,tqdm,xgboost
